--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>.CV</h1>
+    <h1>pheakrin</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#about">About</a>
